--- a/style.css
+++ b/style.css
@@ -1,294 +1,205 @@
+*{
+    padding: 0rem;
+    margin: 0rem;
+}
 body{
-    margin: 0px;
-    padding: 0px;
-    background-image: linear-gradient(180deg, #08110d, #090f0b);
+    color: black;
+    background: #E0DEDE;
+    font-size: 1rem;
+    font-weight: normal;
+    font-family: sans-serif;
+    font-style: normal;
 }
-.container1{
-    /* background-image: url('img/container1.jpg'); */
-    background-image: linear-gradient(0deg, #071410, #0A0801);
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 1rem 2rem 2rem 2rem;
-}
-.c1mainbody{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.motor{
-    transform: rotateX(-10deg) rotateY(30deg);
-    transform-style: preserve-3d;
-    animation-name: rotate;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    display: flex;
-    padding: 6rem 0 0 0;
-    justify-content: center;
-}
-@keyframes rotate{
-    0%{transform: rotateX(10deg) rotateY(45deg) rotateZ(0deg);}
-    100%{transform: rotateX(10deg) rotateY(405deg) rotateZ(0deg);}
-}
-.face{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    opacity: .7s;
-    text-align: center;
+a{
+    text-decoration: none;
     color: white;
-    font-size: 2rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
 }
-.one{
-    transform: rotateX(90deg) translateZ(50px);
-    background-color: green;
-}
-.six{
-    transform: rotateX(90deg) translateZ(-50px);
-    background-color: darkgreen;
-}
-.four{
-    transform: rotateY(90deg) translateZ(50px);
-    background-color: chartreuse;
-}
-.two{
-    transform: rotateY(90deg) translateZ(-50px);
-    padding: 0px;
-    background-color: chartreuse;
-}
-.three{
-    transform: translateZ(50px);
-    background-color: blue;
-}
-.five{
-    transform: translateZ(-50px);
-    background-color: blue;
+
+.main-circle{
+    position: absolute;
+    width: 600px;
+    height: 600px;
+    opacity: 0.2;
+    border-radius: 50%;
+    top: -10rem;
+    right: -10rem;
+    background: #2A246A;
 }
 .header{
     display: flex;
-    justify-content: center;
-}
-.c1body{
-    display: block;
-}
-.c1items{
     padding: 1rem;
-    margin: 1rem;
-    text-align: center;
-    transition: transform .5s;
-}
-.c1items:hover{
-    transform: translateX(-10px);
-    background-color: gray;
-    border-top-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.c1items a{
-    text-decoration: none;
-    cursor: pointer;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 1rem;
-    color: white;
-}
-.c1body{
-    display: flex;
-    justify-content: center;
-    padding: 3rem;
-}
-.c1title{
-    padding: 1rem;
-}
-.c1title h1{
-    color: yellow;
-    font-size: 3rem;
-    font-style: normal;
-    font-variant: small-caps;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    margin: 0rem;
-    display: inline;
-}
-.c1heading:nth-child(1){
-    animation: color-change 3s ease-in-out 5s infinite forwards normal;
-    margin: 0 0 0 1rem;
-}
-.c1heading{
-    animation: color-change 3s ease-in-out 5s infinite forwards normal;
-}
-@keyframes color-change{
-    0%{ color: red;}
-    25%{ color: orange;}
-    50%{ color: yellow;}
-    75%{ color: blue;}
-    100%{ color: blueviolet;}
-}
-.c1title p{
-    font-size: 1.3rem;
-    margin: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    color: yellow;
-}
-.c1title button{
-    padding: 1rem;
-    background-color: skyblue;
-    border-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    border-radius: 6px;
-    cursor: pointer;
-    margin: 0rem 1rem;
-    transition: all .5s;
-}
-.btnlink{
-    text-decoration: none;
-    color: black;
-}
-.c1title button:hover{
-    background-color:gray;
-    transform: translateX(10px);
-}
-.container2{
-    padding:1rem 4rem 2rem 4rem;
-    margin: 2rem;
-    border: solid black 1px;
-    border-radius: 5px;
-    background-color: #b7c9ca;
-    box-shadow: 3px 3px gray;
-}
-.container2 h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-}
-.container2 p{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3rem;
-    font-weight: 500;
-}
-.container2 button{
-    padding: 1rem 2rem;
-    margin: 0 3rem;
-    background-color: skyblue;
-    border-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    border-radius: 6px;
-    cursor: pointer;
-    float:right;
-    transition: transform .5s;
-}
-.container2 button:hover{
-    background-color: #333;
-    color: white;
-    transform: translateY(-10px);
-}
-.container3{
-    padding: .5rem;
-    background-color:#7b75dc;
-}
-.container3 p{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-    margin: .5rem;
-}
-.social{
-    display: flex;
-    justify-content: center;
-}
-.link{
-    width: 6rem;
-    height: 6rem;
-    background-color:white;
-    margin: 1rem;   
-    border: solid gray 1px;
-    border-radius: 5px;
-    overflow: hidden;
-    cursor: pointer;
-    transition: transform .5s;
-}
-.link:hover{
-    transform: scale(1.1) rotateZ(20deg);
-}
-.img{
+    position: fixed;
     width: 100%;
-    height: 100%;
+}
+.site-data{
+    padding: 1rem;
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+}
+.site-logo{
+    position: absolute;
+    top: 1rem;
+}
+.site-name{
+    padding: 0 0 0 90px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    opacity: .7;
+}
+.logo-element{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background: #8272DF;
+    transform: rotateZ(45deg);
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    color: white;
+    justify-content: center;
+}
+.logo-element:nth-child(2){
+    transform: translateX(35px) rotateZ(45deg);
+}
+.navbar{
+    flex: 1;
+}
+.nav-options{
+    list-style: none;
+    padding: 1rem;
+}
+.nav-option{
+    padding: .6rem;
+    display: inline;
+    cursor: pointer;
+}
+.main{
+    padding: 9rem 1rem 4rem 1rem;
+    display: flex;
+    justify-content: center;
+}
+.main-content{}
+.main-heading{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 1rem;
+}
+.main-para{
+    margin: 1rem;
+    width: 22rem;
+    line-height: 1.3rem;
+}
+.main-btn{
+    font-size: 18px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #8267CE;
+    margin: 1rem;
+    width: 4rem;
+    padding: .5rem;
+    font-weight: 600;
+    border-radius: 4px;
+}
+.main-img{
+    background: url('./img/demo\(1\).png');
+    transform: rotate(17deg);
+    width: 371.28px;
+    height: 198.43px;
+}
+.news-section{
+    padding: 1rem;
+    background: #bbb5c6;
+    margin: 3rem 0rem 2rem 0rem;
+    display: flex;
+    justify-content: space-around;
+}
+.news-headline{
+    padding: .5rem;
+}
+.news-btn{
+    background: aliceblue;
+    padding: .5rem;
+    border: solid black 1px;
+    color: #8272df;
+    font-weight: 600;
+    cursor: pointer;
+}
+.about-section{
+    display: flex;
+}
+.community-img{
+    background-image: url('./img/community.png');
+    margin: 1rem;
+    width: 20rem;
+    height: 14rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    flex: 1;
+}
+.about-content{
+    flex: 1;
+    padding: 1rem;
+}
+.about-heading{
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: #8272df;
+    margin: 1rem 0rem;
+}
+.about-para{
+    line-height: 1.4rem;
+}
+.project-section{
+    padding: 1rem;
+    display: grid;
+    grid-template-areas:
+        "h h h"
+        "p p p"
+        ". b .";
+}
+.project-heading{
+    font-weight: 600;
+    color: #8272df;
+    font-size: 1.5rem;
+    font-variant-caps: all-petite-caps;
+    padding: .5rem;
+    grid-area: inherit;
+}
+.feature-projects{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.feature-project{}
+.project-btn{
+    width: 10rem;
+    grid-area: b;
 }
 .footer{
-    background-color:#070404;
-    padding: .7rem;
+    padding: 1rem;
+    display: grid;
+    grid-template-areas:
+        "copyright links author";
+    background-color: #060505;
 }
-.footer h1{
-    color: white;
-    text-align: c;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    font-variant: small-caps;
-    font-size: 1.5rem;
-}
-.footer button{
-    display: inline-block;
-    padding: .5rem 1rem;
-    margin: .5rem;
-    background-color: skyblue;
-    border-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: transform .5s;
-}
-.footer button:hover{
-    background-color: rgb(131, 223, 88);
-    transform: translateX(10px);
-}
-.footer p{
+.footer-content{
+    color: aliceblue;
     text-align: center;
-    color: white;
-    font-style: italic;
-    font-family:sans-serif;
-    font-size: 1rem;
+    font-variant-caps: all-petite-caps;
+    font-size: 1.2rem;
 }
-@media screen and (max-width: 700px){
-    .link{
-        width: 4rem;
-        height: 4rem;
-    }
-    .container2{
-        margin: 1rem 1rem 2rem 1rem;
-        padding: 1rem 2rem 2rem 2rem;
-    }
+.footer-content:nth-child(2){
+    display: flex;
+    justify-content: center;
 }
-@media screen and (max-width: 480px){
-    .link{
-        width: 2.5rem;
-        height: 2.5rem;
-    }
-    .container2{
-        padding: 1rem;
-        margin: 1rem 1rem 3rem 0rem;
-    }
-    .c1items{
-        padding: .5rem;
-        margin: .5rem;
-    }
-    .header{
-        justify-content: center;
-    }
-    .c1mainbody{
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-    .motor{
-        padding: 0px;
-        margin: 5rem 0;
-    }
+.footer-content:nth-child(3) a{
+    font-weight: 600;
+    color: aliceblue;
+    opacity: .8;
+}
+.footer-link{
+    opacity: .8;
+    font-weight: 600;
+    text-align: center;
+    margin: 0 .5rem;
 }
